--- a/html5/src/css/index.css
+++ b/html5/src/css/index.css
@@ -143,6 +143,7 @@ table#idedit {
   background: #444;
 }
 
+/*
 .celltopleft {
   border-top-left-radius: 8px;
 }
@@ -158,6 +159,7 @@ table#idedit {
 .cellbottomright {
   border-bottom-right-radius: 8px;
 }
+*/
 
 table.notes {
   width: 100%; font-size: 9px;
