--- a/html5/src/css/index.css
+++ b/html5/src/css/index.css
@@ -1,31 +1,5 @@
-
-.ui-btn-icon-notext:after {
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.customMenu {
-    background: url(../img/icons/icon-bars.svg) 50% 50% no-repeat;
-    left: 50%;
-    top: 50%;
-}
-
-.customBack {
-    background: url(../img/icons/icon-delete.svg) 50% 50% no-repeat;
-    left: 50%;
-    top: 50%;
-}
-
-.ui-btn-icon-notext.ui-corner-all {
-    border-radius: 20em;
-}
-
-.ui-btn {
-    border-width: 0px;
-    border-style: none;
-}
-
-.mycontent {
-  padding: 0;
+body {
+  background-color: black;
 }
 
 figure.diagram {
@@ -63,7 +37,7 @@ figure.diagram figcaption {
 }
 
 figure.author {
-  width: 30%;
+  width: 50%;
   max-width: 320px;
   border: 1px solid #cccccc;
   margin: 0 2px 0 2px;
@@ -95,97 +69,3 @@ figure.author figcaption {
   border-radius: 0 0 8px 8px;
   margin: 0px;
 }
-
-.cell {
-  border-left: dashed #222 2px;
-}
-
-.row {
-  border-bottom: dashed #222 2px;
-}
-
-.mybackground {
-}
-
-.board {
-  font-size: 0px;
-}
-
-.edit {
-  font-size: 20px;
-}
-
-.box {
-  text-align: center;
-  vertical-align: middle;
-  display: table-cell;
-  min-width: 40px; width: 40px;
-  height: 40px; min-height: 40px;
-}
-
-table#idboard {
-  border: solid #777 4px; border-radius: 12px; background: #333; 
-}
-
-table#idedit {
-  border: solid #777 4px; border-radius: 20px; margin-top: 20px;
-}
-
-.gridnotleft {
-  border-left: solid #111 2px;
-}
-
-.gridnottop {
-  border-top: solid #111 2px;
-}
-
-.mid {
-  background: #444;
-}
-
-/*
-.celltopleft {
-  border-top-left-radius: 8px;
-}
-
-.celltopright {
-  border-top-right-radius: 8px;
-}
-
-.cellbottomleft {
-  border-bottom-left-radius: 8px;
-}
-
-.cellbottomright {
-  border-bottom-right-radius: 8px;
-}
-*/
-
-table.notes {
-  width: 100%; font-size: 9px;
-}
-
-@-webkit-keyframes selectedcell {
-from {-webkit-transform: font-size: 20px;}
-to {-webkit-transform: font-size: 28px;}
-}
-
-@keyframes selectedcell {
-from {font-size: 20px;}
-to {font-size: 28px;}
-}
-
-/* @keyframes selectedcell {
- from {background-color: peru; font-size: 20px;}
- to {background-color: orange; font-size: 28px;}
-}
-
-@-webkit-keyframes refuse {
-from {-webkit-transform: rotate(-30deg)}
-to {-webkit-transform: rotate(30deg)}
-}
-
-@keyframes refuse {
-from {transform: rotate(-30deg)}
-to {transform: rotate(30deg)}
-} */
